add swagger documentation for roles pagination
